Fix alignment for media sections used as hero

--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -107,7 +107,10 @@
 
   @media (min-width: 48rem) {
     grid-template-columns: 1fr 1fr;
-    align-items: center;
+
+    &:not([data-align="start"]) {
+      align-items: center;
+    }
 
     & > img {
       min-block-size: 40rem;
